; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/staging/rtl8187se/extr_r8180_dm.c_SwAntennaDiversity.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/staging/rtl8187se/extr_r8180_dm.c_SwAntennaDiversity.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.net_device = type { i32 }
%struct.r8180_priv = type { i32, i32, i32, i32, i32, i64, i32, i32, i32, i32, i64, i64, i32, i32, %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i64 }

@.str = private unnamed_addr constant [40 x i8] c"(1) AdTickCount: %d, AdCheckPeriod: %d\0A\00", align 1
@.str.1 = private unnamed_addr constant [51 x i8] c"(2) AdRxSignalStrength: %ld, AdRxSsThreshold: %ld\0A\00", align 1
@IEEE80211_LINKED = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @SwAntennaDiversity(%struct.net_device* %0) #0 {
  %2 = alloca %struct.net_device*, align 8
  %3 = alloca %struct.r8180_priv*, align 8
  %4 = alloca i32, align 4
  store %struct.net_device* %0, %struct.net_device** %2, align 8
  %5 = load %struct.net_device*, %struct.net_device** %2, align 8
  %6 = call i64 @ieee80211_priv(%struct.net_device* %5)
  %7 = inttoptr i64 %6 to %struct.r8180_priv*
  store %struct.r8180_priv* %7, %struct.r8180_priv** %3, align 8
  store i32 0, i32* %4, align 4
  %8 = load i32, i32* %4, align 4
  %9 = icmp ne i32 %8, 0
  br i1 %9, label %10, label %29

10:                                               ; preds = %1
  %11 = load %struct.r8180_priv*, %struct.r8180_priv** %3, align 8
  %12 = getelementptr inbounds %struct.r8180_priv, %struct.r8180_priv* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 8
  %14 = add nsw i32 %13, 1
  store i32 %14, i32* %12, align 8
  %15 = load %struct.r8180_priv*, %struct.r8180_priv** %3, align 8
  %16 = getelementptr inbounds %struct.r8180_priv, %struct.r8180_priv* %15, i32 0, i32 0
  %17 = load i32, i32* %16, align 8
  %18 = load %struct.r8180_priv*, %struct.r8180_priv** %3, align 8
  %19 = getelementptr inbounds %struct.r8180_priv, %struct.r8180_priv* %18, i32 0, i32 1
  %20 = load i32, i32* %19, align 4
  %21 = call i32 @printk(i8* getelementptr inbounds ([40 x i8], [40 x i8]* @.str, i64 0, i64 0), i32 %17, i32 %20)
  %22 = load %struct.r8180_priv*, %struct.r8180_priv** %3, align 8
  %23 = getelementptr inbounds %struct.r8180_priv, %struct.r8180_priv* %22, i32 0, i32 2
  %24 = load i32, i32* %23, align 8
  %25 = load %struct.r8180_priv*, %struct.r8180_priv** %3, align 8
  %26 = getelementptr inbounds %struct.r8180_priv, %struct.r8180_priv* %25, i32 0, i32 3
  %27 = load i32, i32* %26, align 4
  %28 = call i32 @printk(i8* getelementptr inbounds ([51 x i8], [51 x i8]* @.str.1, i64 0, i64 0), i32 %24, i32 %27)
  br label %29

29:                                               ; preds = %10, %1
  %30 = load %struct.r8180_priv*, %struct.r8180_priv** %3, align 8
  %31 = getelementptr inbounds %struct.r8180_priv, %struct.r8180_priv* %30, i32 0, i32 14
  %32 = load %struct.TYPE_2__*, %struct.TYPE_2__** %31, align 8
  %33 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %32, i32 0, i32 0
  %34 = load i64, i64* %33, align 8
  %35 = load i64, i64* @IEEE80211_LINKED, align 8
  %36 = icmp ne i64 %34, %35
  br i1 %36, label %37, label %42

37:                                               ; preds = %29
  %38 = load %struct.r8180_priv*, %struct.r8180_priv** %3, align 8
  %39 = getelementptr inbounds %struct.r8180_priv, %struct.r8180_priv* %38, i32 0, i32 4
  store i32 0, i32* %39, align 8
  %40 = load %struct.net_device*, %struct.net_device** %2, align 8
  %41 = call i32 @SwitchAntenna(%struct.net_device* %40)
  br label %259

42:                                               ; preds = %29
  %43 = load %struct.r8180_priv*, %struct.r8180_priv** %3, align 8
  %44 = getelementptr inbounds %struct.r8180_priv, %struct.r8180_priv* %43, i32 0, i32 5
  %45 = load i64, i64* %44, align 8
  %46 = icmp eq i64 %45, 0
  br i1 %46, label %47, label %52

47:                                               ; preds = %42
  %48 = load %struct.r8180_priv*, %struct.r8180_priv** %3, align 8
  %49 = getelementptr inbounds %struct.r8180_priv, %struct.r8180_priv* %48, i32 0, i32 4
  store i32 0, i32* %49, align 8
  %50 = load %struct.net_device*, %struct.net_device** %2, align 8
  %51 = call i32 @SwitchAntenna(%struct.net_device* %50)
  br label %258

52:                                               ; preds = %42
  %53 = load %struct.r8180_priv*, %struct.r8180_priv** %3, align 8
  %54 = getelementptr inbounds %struct.r8180_priv, %struct.r8180_priv* %53, i32 0, i32 4
  %55 = load i32, i32* %54, align 8
  %56 = icmp eq i32 %55, 1
  br i1 %56, label %57, label %124

57:                                               ; preds = %52
  %58 = load %struct.r8180_priv*, %struct.r8180_priv** %3, align 8
  %59 = getelementptr inbounds %struct.r8180_priv, %struct.r8180_priv* %58, i32 0, i32 4
  store i32 0, i32* %59, align 8
  %60 = load %struct.r8180_priv*, %struct.r8180_priv** %3, align 8
  %61 = getelementptr inbounds %struct.r8180_priv, %struct.r8180_priv* %60, i32 0, i32 2
  %62 = load i32, i32* %61, align 8
  %63 = load %struct.r8180_priv*, %struct.r8180_priv** %3, align 8
  %64 = getelementptr inbounds %struct.r8180_priv, %struct.r8180_priv* %63, i32 0, i32 6
  %65 = load i32, i32* %64, align 8
  %66 = add nsw i32 %62, %65
  %67 = sdiv i32 %66, 2
  %68 = load %struct.r8180_priv*, %struct.r8180_priv** %3, align 8
  %69 = getelementptr inbounds %struct.r8180_priv, %struct.r8180_priv* %68, i32 0, i32 3
  store i32 %67, i32* %69, align 4
  %70 = load %struct.r8180_priv*, %struct.r8180_priv** %3, align 8
  %71 = getelementptr inbounds %struct.r8180_priv, %struct.r8180_priv* %70, i32 0, i32 3
  %72 = load i32, i32* %71, align 4
  %73 = load %struct.r8180_priv*, %struct.r8180_priv** %3, align 8
  %74 = getelementptr inbounds %struct.r8180_priv, %struct.r8180_priv* %73, i32 0, i32 7
  %75 = load i32, i32* %74, align 4
  %76 = icmp sgt i32 %72, %75
  br i1 %76, label %77, label %81

77:                                               ; preds = %57
  %78 = load %struct.r8180_priv*, %struct.r8180_priv** %3, align 8
  %79 = getelementptr inbounds %struct.r8180_priv, %struct.r8180_priv* %78, i32 0, i32 7
  %80 = load i32, i32* %79, align 4
  br label %85

81:                                               ; preds = %57
  %82 = load %struct.r8180_priv*, %struct.r8180_priv** %3, align 8
  %83 = getelementptr inbounds %struct.r8180_priv, %struct.r8180_priv* %82, i32 0, i32 3
  %84 = load i32, i32* %83, align 4
  br label %85

85:                                               ; preds = %81, %77
  %86 = phi i32 [ %80, %77 ], [ %84, %81 ]
  %87 = load %struct.r8180_priv*, %struct.r8180_priv** %3, align 8
  %88 = getelementptr inbounds %struct.r8180_priv, %struct.r8180_priv* %87, i32 0, i32 3
  store i32 %86, i32* %88, align 4
  %89 = load %struct.r8180_priv*, %struct.r8180_priv** %3, align 8
  %90 = getelementptr inbounds %struct.r8180_priv, %struct.r8180_priv* %89, i32 0, i32 2
  %91 = load i32, i32* %90, align 8
  %92 = load %struct.r8180_priv*, %struct.r8180_priv** %3, align 8
  %93 = getelementptr inbounds %struct.r8180_priv, %struct.r8180_priv* %92, i32 0, i32 6
  %94 = load i32, i32* %93, align 8
  %95 = icmp slt i32 %91, %94
  br i1 %95, label %96, label %117

96:                                               ; preds = %85
  %97 = load %struct.r8180_priv*, %struct.r8180_priv** %3, align 8
  %98 = getelementptr inbounds %struct.r8180_priv, %struct.r8180_priv* %97, i32 0, i32 1
  %99 = load i32, i32* %98, align 4
  %100 = mul nsw i32 %99, 2
  store i32 %100, i32* %98, align 4
  %101 = load %struct.r8180_priv*, %struct.r8180_priv** %3, align 8
  %102 = getelementptr inbounds %struct.r8180_priv, %struct.r8180_priv* %101, i32 0, i32 1
  %103 = load i32, i32* %102, align 4
  %104 = load %struct.r8180_priv*, %struct.r8180_priv** %3, align 8
  %105 = getelementptr inbounds %struct.r8180_priv, %struct.r8180_priv* %104, i32 0, i32 8
  %106 = load i32, i32* %105, align 8
  %107 = icmp sgt i32 %103, %106
  br i1 %107, label %108, label %114

108:                                              ; preds = %96
  %109 = load %struct.r8180_priv*, %struct.r8180_priv** %3, align 8
  %110 = getelementptr inbounds %struct.r8180_priv, %struct.r8180_priv* %109, i32 0, i32 8
  %111 = load i32, i32* %110, align 8
  %112 = load %struct.r8180_priv*, %struct.r8180_priv** %3, align 8
  %113 = getelementptr inbounds %struct.r8180_priv, %struct.r8180_priv* %112, i32 0, i32 1
  store i32 %111, i32* %113, align 4
  br label %114

114:                                              ; preds = %108, %96
  %115 = load %struct.net_device*, %struct.net_device** %2, align 8
  %116 = call i32 @SwitchAntenna(%struct.net_device* %115)
  br label %123

117:                                              ; preds = %85
  %118 = load %struct.r8180_priv*, %struct.r8180_priv** %3, align 8
  %119 = getelementptr inbounds %struct.r8180_priv, %struct.r8180_priv* %118, i32 0, i32 9
  %120 = load i32, i32* %119, align 4
  %121 = load %struct.r8180_priv*, %struct.r8180_priv** %3, align 8
  %122 = getelementptr inbounds %struct.r8180_priv, %struct.r8180_priv* %121, i32 0, i32 1
  store i32 %120, i32* %122, align 4
  br label %123

123:                                              ; preds = %117, %114
  br label %257

124:                                              ; preds = %52
  %125 = load %struct.r8180_priv*, %struct.r8180_priv** %3, align 8
  %126 = getelementptr inbounds %struct.r8180_priv, %struct.r8180_priv* %125, i32 0, i32 0
  store i32 0, i32* %126, align 8
  %127 = load %struct.r8180_priv*, %struct.r8180_priv** %3, align 8
  %128 = getelementptr inbounds %struct.r8180_priv, %struct.r8180_priv* %127, i32 0, i32 10
  %129 = load i64, i64* %128, align 8
  %130 = load %struct.r8180_priv*, %struct.r8180_priv** %3, align 8
  %131 = getelementptr inbounds %struct.r8180_priv, %struct.r8180_priv* %130, i32 0, i32 11
  %132 = load i64, i64* %131, align 8
  %133 = icmp slt i64 %129, %132
  br i1 %133, label %134, label %144

134:                                              ; preds = %124
  %135 = load %struct.r8180_priv*, %struct.r8180_priv** %3, align 8
  %136 = getelementptr inbounds %struct.r8180_priv, %struct.r8180_priv* %135, i32 0, i32 12
  %137 = load i32, i32* %136, align 8
  %138 = icmp eq i32 %137, 0
  br i1 %138, label %139, label %144

139:                                              ; preds = %134
  %140 = load %struct.net_device*, %struct.net_device** %2, align 8
  %141 = call i32 @SwitchAntenna(%struct.net_device* %140)
  %142 = load %struct.r8180_priv*, %struct.r8180_priv** %3, align 8
  %143 = getelementptr inbounds %struct.r8180_priv, %struct.r8180_priv* %142, i32 0, i32 13
  store i32 1, i32* %143, align 4
  br label %166

144:                                              ; preds = %134, %124
  %145 = load %struct.r8180_priv*, %struct.r8180_priv** %3, align 8
  %146 = getelementptr inbounds %struct.r8180_priv, %struct.r8180_priv* %145, i32 0, i32 11
  %147 = load i64, i64* %146, align 8
  %148 = load %struct.r8180_priv*, %struct.r8180_priv** %3, align 8
  %149 = getelementptr inbounds %struct.r8180_priv, %struct.r8180_priv* %148, i32 0, i32 10
  %150 = load i64, i64* %149, align 8
  %151 = icmp slt i64 %147, %150
  br i1 %151, label %152, label %162

152:                                              ; preds = %144
  %153 = load %struct.r8180_priv*, %struct.r8180_priv** %3, align 8
  %154 = getelementptr inbounds %struct.r8180_priv, %struct.r8180_priv* %153, i32 0, i32 12
  %155 = load i32, i32* %154, align 8
  %156 = icmp eq i32 %155, 1
  br i1 %156, label %157, label %162

157:                                              ; preds = %152
  %158 = load %struct.net_device*, %struct.net_device** %2, align 8
  %159 = call i32 @SwitchAntenna(%struct.net_device* %158)
  %160 = load %struct.r8180_priv*, %struct.r8180_priv** %3, align 8
  %161 = getelementptr inbounds %struct.r8180_priv, %struct.r8180_priv* %160, i32 0, i32 13
  store i32 1, i32* %161, align 4
  br label %165

162:                                              ; preds = %152, %144
  %163 = load %struct.r8180_priv*, %struct.r8180_priv** %3, align 8
  %164 = getelementptr inbounds %struct.r8180_priv, %struct.r8180_priv* %163, i32 0, i32 13
  store i32 0, i32* %164, align 4
  br label %165

165:                                              ; preds = %162, %157
  br label %166

166:                                              ; preds = %165, %139
  %167 = load %struct.r8180_priv*, %struct.r8180_priv** %3, align 8
  %168 = getelementptr inbounds %struct.r8180_priv, %struct.r8180_priv* %167, i32 0, i32 13
  %169 = load i32, i32* %168, align 4
  %170 = icmp ne i32 %169, 0
  br i1 %170, label %256, label %171

171:                                              ; preds = %166
  %172 = load i32, i32* %4, align 4
  %173 = icmp ne i32 %172, 0
  br i1 %173, label %174, label %256

174:                                              ; preds = %171
  %175 = load %struct.r8180_priv*, %struct.r8180_priv** %3, align 8
  %176 = getelementptr inbounds %struct.r8180_priv, %struct.r8180_priv* %175, i32 0, i32 2
  %177 = load i32, i32* %176, align 8
  %178 = load %struct.r8180_priv*, %struct.r8180_priv** %3, align 8
  %179 = getelementptr inbounds %struct.r8180_priv, %struct.r8180_priv* %178, i32 0, i32 3
  %180 = load i32, i32* %179, align 4
  %181 = icmp slt i32 %177, %180
  br i1 %181, label %182, label %192

182:                                              ; preds = %174
  %183 = load %struct.r8180_priv*, %struct.r8180_priv** %3, align 8
  %184 = getelementptr inbounds %struct.r8180_priv, %struct.r8180_priv* %183, i32 0, i32 2
  %185 = load i32, i32* %184, align 8
  %186 = load %struct.r8180_priv*, %struct.r8180_priv** %3, align 8
  %187 = getelementptr inbounds %struct.r8180_priv, %struct.r8180_priv* %186, i32 0, i32 6
  store i32 %185, i32* %187, align 8
  %188 = load %struct.r8180_priv*, %struct.r8180_priv** %3, align 8
  %189 = getelementptr inbounds %struct.r8180_priv, %struct.r8180_priv* %188, i32 0, i32 4
  store i32 1, i32* %189, align 8
  %190 = load %struct.net_device*, %struct.net_device** %2, align 8
  %191 = call i32 @SwitchAntenna(%struct.net_device* %190)
  br label %255

192:                                              ; preds = %174
  %193 = load %struct.r8180_priv*, %struct.r8180_priv** %3, align 8
  %194 = getelementptr inbounds %struct.r8180_priv, %struct.r8180_priv* %193, i32 0, i32 4
  store i32 0, i32* %194, align 8
  %195 = load %struct.r8180_priv*, %struct.r8180_priv** %3, align 8
  %196 = getelementptr inbounds %struct.r8180_priv, %struct.r8180_priv* %195, i32 0, i32 2
  %197 = load i32, i32* %196, align 8
  %198 = load %struct.r8180_priv*, %struct.r8180_priv** %3, align 8
  %199 = getelementptr inbounds %struct.r8180_priv, %struct.r8180_priv* %198, i32 0, i32 3
  %200 = load i32, i32* %199, align 4
  %201 = add nsw i32 %200, 10
  %202 = icmp sgt i32 %197, %201
  br i1 %202, label %203, label %241

203:                                              ; preds = %192
  %204 = load %struct.r8180_priv*, %struct.r8180_priv** %3, align 8
  %205 = getelementptr inbounds %struct.r8180_priv, %struct.r8180_priv* %204, i32 0, i32 3
  %206 = load i32, i32* %205, align 4
  %207 = load %struct.r8180_priv*, %struct.r8180_priv** %3, align 8
  %208 = getelementptr inbounds %struct.r8180_priv, %struct.r8180_priv* %207, i32 0, i32 7
  %209 = load i32, i32* %208, align 4
  %210 = icmp sle i32 %206, %209
  br i1 %210, label %211, label %241

211:                                              ; preds = %203
  %212 = load %struct.r8180_priv*, %struct.r8180_priv** %3, align 8
  %213 = getelementptr inbounds %struct.r8180_priv, %struct.r8180_priv* %212, i32 0, i32 3
  %214 = load i32, i32* %213, align 4
  %215 = load %struct.r8180_priv*, %struct.r8180_priv** %3, align 8
  %216 = getelementptr inbounds %struct.r8180_priv, %struct.r8180_priv* %215, i32 0, i32 2
  %217 = load i32, i32* %216, align 8
  %218 = add nsw i32 %214, %217
  %219 = sdiv i32 %218, 2
  %220 = load %struct.r8180_priv*, %struct.r8180_priv** %3, align 8
  %221 = getelementptr inbounds %struct.r8180_priv, %struct.r8180_priv* %220, i32 0, i32 3
  store i32 %219, i32* %221, align 4
  %222 = load %struct.r8180_priv*, %struct.r8180_priv** %3, align 8
  %223 = getelementptr inbounds %struct.r8180_priv, %struct.r8180_priv* %222, i32 0, i32 3
  %224 = load i32, i32* %223, align 4
  %225 = load %struct.r8180_priv*, %struct.r8180_priv** %3, align 8
  %226 = getelementptr inbounds %struct.r8180_priv, %struct.r8180_priv* %225, i32 0, i32 7
  %227 = load i32, i32* %226, align 4
  %228 = icmp sgt i32 %224, %227
  br i1 %228, label %229, label %233

229:                                              ; preds = %211
  %230 = load %struct.r8180_priv*, %struct.r8180_priv** %3, align 8
  %231 = getelementptr inbounds %struct.r8180_priv, %struct.r8180_priv* %230, i32 0, i32 7
  %232 = load i32, i32* %231, align 4
  br label %237

233:                                              ; preds = %211
  %234 = load %struct.r8180_priv*, %struct.r8180_priv** %3, align 8
  %235 = getelementptr inbounds %struct.r8180_priv, %struct.r8180_priv* %234, i32 0, i32 3
  %236 = load i32, i32* %235, align 4
  br label %237

237:                                              ; preds = %233, %229
  %238 = phi i32 [ %232, %229 ], [ %236, %233 ]
  %239 = load %struct.r8180_priv*, %struct.r8180_priv** %3, align 8
  %240 = getelementptr inbounds %struct.r8180_priv, %struct.r8180_priv* %239, i32 0, i32 3
  store i32 %238, i32* %240, align 4
  br label %241

241:                                              ; preds = %237, %203, %192
  %242 = load %struct.r8180_priv*, %struct.r8180_priv** %3, align 8
  %243 = getelementptr inbounds %struct.r8180_priv, %struct.r8180_priv* %242, i32 0, i32 1
  %244 = load i32, i32* %243, align 4
  %245 = load %struct.r8180_priv*, %struct.r8180_priv** %3, align 8
  %246 = getelementptr inbounds %struct.r8180_priv, %struct.r8180_priv* %245, i32 0, i32 9
  %247 = load i32, i32* %246, align 4
  %248 = icmp sgt i32 %244, %247
  br i1 %248, label %249, label %254

249:                                              ; preds = %241
  %250 = load %struct.r8180_priv*, %struct.r8180_priv** %3, align 8
  %251 = getelementptr inbounds %struct.r8180_priv, %struct.r8180_priv* %250, i32 0, i32 1
  %252 = load i32, i32* %251, align 4
  %253 = sdiv i32 %252, 2
  store i32 %253, i32* %251, align 4
  br label %254

254:                                              ; preds = %249, %241
  br label %255

255:                                              ; preds = %254, %182
  br label %256

256:                                              ; preds = %255, %171, %166
  br label %257

257:                                              ; preds = %256, %123
  br label %258

258:                                              ; preds = %257, %47
  br label %259

259:                                              ; preds = %258, %37
  %260 = load %struct.r8180_priv*, %struct.r8180_priv** %3, align 8
  %261 = getelementptr inbounds %struct.r8180_priv, %struct.r8180_priv* %260, i32 0, i32 5
  store i64 0, i64* %261, align 8
  %262 = load %struct.r8180_priv*, %struct.r8180_priv** %3, align 8
  %263 = getelementptr inbounds %struct.r8180_priv, %struct.r8180_priv* %262, i32 0, i32 10
  store i64 0, i64* %263, align 8
  %264 = load %struct.r8180_priv*, %struct.r8180_priv** %3, align 8
  %265 = getelementptr inbounds %struct.r8180_priv, %struct.r8180_priv* %264, i32 0, i32 11
  store i64 0, i64* %265, align 8
  ret void
}

declare dso_local i64 @ieee80211_priv(%struct.net_device*) #1

declare dso_local i32 @printk(i8*, i32, i32) #1

declare dso_local i32 @SwitchAntenna(%struct.net_device*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
